<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SupChat</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Login -->
    <string name="fragment_login_title">Login</string>
    <string name="fragment_login_hint">Pseudo</string>
    <string name="fragment_login_password_hint">Password</string>
    <string name="fragment_login_validate">Validate</string>
    <string name="fragment_login_go_to_create">Create Account</string>
    <string name="fragment_login_error_network">Error</string>
    
    <!-- Create Account -->
    <string name="fragment_create_account_title">Create Account</string>
    <string name="fragment_create_account_hint">Pseudo</string>
    <string name="fragment_create_account_password_hint">Password</string>
    <string name="fragment_create_account_validate">Validate</string>
    <string name="fragment_create_account_go_to_login">Login</string>
    
    <!-- Chats -->
    <string name="activity_chat_menu_add">Add</string>
    <string name="activity_create_chat_no_name_error">Name error</string>
    <string name="activity_create_chat_no_users_error">Users error</string>
    
	<string name="menu_validate">Ok</string>
    
</resources>